Fixes #214 - footer too wide

--- a/client/src/styles/_footer.scss
+++ b/client/src/styles/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-	width:100vw;
+	width:100%;
 	padding: 20px 30px;
 	display: flex;
 	justify-content: space-between;
